fix: width overflow

--- a/components/Goals/Goals.module.css
+++ b/components/Goals/Goals.module.css
@@ -9,6 +9,7 @@
   display: flex;
   justify-content: center;
   flex-direction: column;
+  flex-wrap: wrap;
 }
 
 .cardcontainer {
